# rad-touren

./: .gitignore  README.md  _config.yml  concept.md  dahme-seen-runde.md  erkner-mueggelsee-runde.md  potsdam-baumbluetefest-runde.md  pyproject.toml  ruff.toml  spreewald-runde.md  touren.md
.kiro/hooks/: gpx-consistency-check.json  gpx-consistency-check.kiro.hook  roadtrip-map-check.json  roadtrip-map-check.kiro.hook  validate-gpx-output.json  validate-gpx-output.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/brouter-mcp-server/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/mcp-subprocess-integration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: app-development.md  bike-output-template.md  bike-planner.md  bike-planning.md  bike-template.md  commit-messages.md  cycling-tour-planning.md  mcp-development.md  product.md  project-layout.md  radtouren-planung.md  road-planner.md  road-planning.md  road-template.md  roadtrip-planning.md  user-preferences.md
app/: Dockerfile  README.md
app/backend/: agent.py  i18n.py  main.py  mcp_manager.py  pyproject.toml  requirements.txt  steering.py  tools.py
app/backend/tests/: test_mcp_call_tool.py  test_mcp_declarations_prop.py  test_mcp_error_prop.py  test_mcp_geo_event_prop.py  test_mcp_jsonrpc.py  test_mcp_lifecycle_prop.py  test_mcp_respawn_prop.py  test_mcp_routing_prop.py  test_mcp_schema_conversion.py  test_mcp_schema_prop.py  test_mcp_steering_prop.py  test_migration_smoke.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.vue  i18n.ts
app/frontend/src/components/: ChatInput.vue  TourContent.vue  TourMap.vue
brouter-mcp/: README.md  pyproject.toml  server.py
brouter-mcp/tests/: test_integration.py  test_render_gpx_map.py  test_server.py
concepts/: CONCEPT.md
cycling/: dahme-seen.md
gpx/: dahme-seen-runde.gpx  erkner-mueggelsee-runde.gpx  potsdam-baumbluetefest-runde.gpx  spreewald-runde.gpx
lib/: __init__.py  brouter.py  geocoding.py  overpass.py  pyproject.toml  routes.py  routing.py  transit.py  weather.py
lib/src/lib/: brouter.py  overpass.py  routes.py  routing.py  weather.py  wikivoyage.py
mcp/: README.md
mcp/brouter/: README.md  pyproject.toml  server.py
mcp/brouter/icons/: LICENSE
mcp/brouter/tests/: test_integration.py  test_render_elevation_profile.py  test_render_gpx_map.py  test_server.py
mcp/context7/: README.md  pyproject.toml  server.py
mcp/gitlab/: README.md  pyproject.toml  server.py
mcp/jira/: README.md  pyproject.toml  server.py
mcp/open-meteo/: README.md  pyproject.toml  server.py
mcp/open-meteo/tests/: test_server.py
mcp/ors/: README.md  geocoding.py  pyproject.toml  server.py
mcp/osrm/: README.md  pyproject.toml  routing.py  server.py
mcp/osrm/trips/bike/gpx/: potsdam-havel-seen-runde.gpx
mcp/osrm/trips/road/gpx/: sardinien-roadtrip.gpx  sardinien-rundreise-teil1.gpx  sardinien-rundreise-teil2.gpx  sardinien-rundreise.gpx
mcp/overpass/: README.md  pyproject.toml  server.py
mcp/overpass/tests/: __init__.py  test_server.py
mcp/podcasts/: podcasts.py  pyproject.toml  server.py
mcp/podcasts/tests/: test_podcasts.py
mcp/serpapi-flights/: README.md  flights.py  pyproject.toml  server.py
mcp/sonarqube/: README.md  pyproject.toml  server.py
mcp/tavily/: README.md  pyproject.toml  server.py  tavily.py
mcp/travel-content/: README.md  content.py  pyproject.toml  server.py
mcp/travel-videos/: pyproject.toml  server.py  videos.py
mcp/travel-videos/tests/: test_videos.py
mcp/vbb/: README.md  pyproject.toml  server.py  transit.py
mcp/vbb/tests/: test_server.py
mcp/waymarkedtrails/: README.md  pyproject.toml  routes.py  server.py
mcp/wikivoyage/: README.md  pyproject.toml  server.py
planning/road/: amalfikueste-roadtrip.md
planning/road/gpx/: nordspanien-kueste.gpx
roadtrips/: README.md  finnland-seenplatte.md  galizien-atlantikkueste.md  nordspanien-kueste.md
roadtrips/gpx/: nordspanien-kueste.gpx
routes/: potsdam-baumbluetefest.md  strausberg-buckow.md
routes/gpx/: eberswalde-chorin-werbellinsee.gpx  strausberg-buckow.gpx
scripts/: README.md  render_roadtrip_map.py
touren/: README.md  dahme-seen-runde.md  dahme-seen.md  eberswalde-chorin-werbellinsee.md  erkner-mueggelsee.md  map.html  potsdam-baumbluetefest.md  spreewald-runde.md  spreewald.md  strausberg-buckow.md
touren/gpx/: strausberg-buckow.gpx
trips/bike/: README.md
trips/bike/blankenfelde-koenigswusterhausen-sicher/: index.md
trips/bike/blankenfelde-koenigswusterhausen-sicher/gpx/: blankenfelde-kw-sicher.gpx
trips/bike/eberswalde-chorin-werbellinsee/: index.md
trips/bike/erkner-mueggelsee/: index.md
trips/bike/potsdam-baumbluetefest/gpx/: potsdam-baumbluetefest.gpx
trips/bike/spreewald/: index.md
trips/bike/strausberg-buckow/: index.md
trips/hike/: README.md
trips/road/: README.md  finnland-seenplatte.md  nordspanien-kueste.md
trips/road/gpx/: amalfikueste-roadtrip.gpx  nordspanien-kueste-tag15.gpx  nordspanien-kueste-tag4.gpx  nordspanien-kueste-tag7.gpx  santander-potes.gpx
trips/road/nordspanien-kueste/: index.md  review.md
trips/road/nordspanien-kueste/gpx/: bilbao-san-sebastian.gpx  cangas-de-onis-gijon.gpx  gijon-san-vicente.gpx  san-vicente-vitoria.gpx
