[project]
name = "rad-touren"
version = "0.0.0"
description = "Cycling tours, road trips, and hiking — AI-powered tour planner"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
