[project]
name = "trip-planner-lib"
version = "0.1.0"
description = "Shared API client library for tour planning"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lib"]
