[project]
name = "trip-planner-backend"
version = "0.1.0"
description = "AI-powered tour planner backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-genai>=1.0.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
]

[project.scripts]
serve = "uvicorn main:app --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
