[project]
name = "brouter-mcp"
version = "1.0.0"
description = "MCP server wrapping BRouter cycling routing API and Nominatim geocoding"
requires-python = ">=3.11"
dependencies = [
    "trip-planner-lib",
    "fastmcp",
    "httpx",
    "staticmap",
    "gpxpy",
    "matplotlib",
]

[tool.uv.sources]
trip-planner-lib = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "hypothesis",
    "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
