[project]
name = "context7-mcp"
version = "1.0.0"
description = "Python MCP server for Context7 — up-to-date library documentation for LLMs"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
