[project]
name = "open-meteo-mcp"
version = "1.0.0"
description = "MCP server wrapping Open-Meteo weather API for cycling tour planning"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
