[project]
name = "osrm-mcp"
version = "1.0.0"
description = "MCP server wrapping OSRM public API for car routing with GPX export"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
