[project]
name = "podcasts-mcp"
version = "1.0.0"
description = "MCP server for searching travel podcasts and extracting episode transcripts via Podcast Index API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
