[project]
name = "travel-content-mcp"
version = "1.0.0"
description = "MCP server for extracting structured travel recommendations from blogs and videos"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
