[project]
name = "wikivoyage-mcp"
version = "1.0.0"
description = "MCP server wrapping the Wikivoyage MediaWiki API for travel information"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
